tests/miniJava/neg/000319_mutation.MiniJava
class java { public static void Main ( Main [ ] java ) { { } } }
